# Legate

./: .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  e2e_output.txt  nginx.conf  package-lock.json
backend/: .dockerignore  .env.example  Dockerfile  celerybeat-schedule  entrypoint.sh  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 6859bb69b2d3_phase2_schema.py  a4c91f02d7e1_phase2_logic_fixes.py  b2d4e6f8a1c3_phase3_password_reset.py  c1e5d8f2a4b7_phase4_features.py  f3a7c9d2e8b1_phase3_recovery_blob.py
backend/app/: config.py  dependencies.py  main.py
backend/app/api/: activity.py  auth.py  beneficiaries.py  capsules.py  checkin.py  delivery.py  settings.py  users.py
backend/app/core/: audit.py  email.py  ratelimit.py  security.py  supabase.py
backend/app/db/: base.py  session.py
backend/app/schemas/: auth.py  beneficiary.py  capsule.py  checkin.py  user.py
backend/app/services/: auth_service.py  beneficiary_service.py  capsule_service.py  checkin_service.py  delivery_service.py
backend/app/worker/: celery_app.py
backend/scripts/: check_no_plaintext_log.sh  get_test_otp.py
backend/tests/: conftest.py  test_auth.py  test_beneficiaries.py  test_capsules.py  test_checkin.py  test_health.py  test_schemas.py  test_users.py
backend/tests/e2e/: conftest.py  test_01_health.py  test_02_auth.py  test_03_beneficiaries.py  test_04_capsules.py  test_05_checkin_settings.py  test_06_checkin_tokens.py  test_07_activity.py  test_08_users.py  test_09_celery_tasks.py  test_10_security.py  (+5 more)
(+131 files in other folders)
